fix: change align for multiline labels

--- a/src/components/CheckedLabel/CheckedLabel.scss
+++ b/src/components/CheckedLabel/CheckedLabel.scss
@@ -4,6 +4,7 @@ $block: '.#{variables.$ns}checked-label';
 
 #{$block} {
     display: inline-flex;
+    align-items: baseline;
     font-family: var(--yc-text-body-font-family);
     font-weight: normal;
     color: var(--yc-color-text-primary);
@@ -28,7 +29,6 @@ $block: '.#{variables.$ns}checked-label';
     }
 
     &__text {
-        align-self: center;
         white-space: normal;
 
         #{$block}_disabled & {
